# mldsa_c

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  linkedlist.c  linkedlist.h  main.c  qsort.c  qsort.h  queue.c  queue.h
tests/: CMakeLists.txt  check_linkedlist.c  check_qsort.c  check_queue.c  main.c  main.h
